<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dialog_padding"
    android:background="@drawable/dialog_fragment_background">

    <ImageView
        android:id="@+id/selected_character_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/selected_character_image_description"
        app:layout_constraintEnd_toStartOf="@+id/vs_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/selected_name_textview"/>

    <TextView
        android:id="@+id/selected_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs_str"
        android:layout_margin="4dp"
        style="@style/NormalTesxtStyle"
        app:layout_constraintTop_toBottomOf="@id/selected_character_image"
        app:layout_constraintEnd_toEndOf="@id/selected_character_image"
        app:layout_constraintStart_toStartOf="@id/selected_character_image"
        app:layout_constraintBottom_toTopOf="@id/partners_barrier" />

    <TextView
        android:id="@+id/vs_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs_str"
        android:layout_margin="4dp"
        style="@style/BigTesxtStyle"
        app:layout_constraintBottom_toBottomOf="@id/selected_character_image"
        app:layout_constraintEnd_toStartOf="@id/partner_character_image"
        app:layout_constraintStart_toEndOf="@id/selected_character_image"
        app:layout_constraintTop_toTopOf="@id/selected_character_image" />

    <ImageView
        android:id="@+id/partner_character_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:contentDescription="@string/beer_partner_character_image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vs_textview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/partner_name_textview" />

    <TextView
        android:id="@+id/partner_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs_str"
        android:layout_margin="4dp"
        style="@style/NormalTesxtStyle"
        app:layout_constraintTop_toBottomOf="@id/partner_character_image"
        app:layout_constraintEnd_toEndOf="@id/partner_character_image"
        app:layout_constraintStart_toStartOf="@id/partner_character_image"
        app:layout_constraintBottom_toTopOf="@id/partners_barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/partners_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="vs_textview,selected_name_textview,partner_name_textview"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/location_beer_bout_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_elements_margin_top"
        android:text="@string/location_beer_bout"
        style="@style/NormalTesxtStyle"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partners_barrier" />

    <TextView
        android:id="@+id/location_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_elements_margin_top"
        android:text="@string/location_fake"
        style="@style/BigBoldTesxtStyle"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_beer_bout_textview"
        app:layout_constraintBottom_toTopOf="@id/description_contenders_textview" />

    <TextView
        android:id="@+id/description_contenders_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_elements_margin_top"
        android:text="@string/description_of_the_contenders"
        style="@style/NormalTesxtStyle"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_textview"
        app:layout_constraintBottom_toTopOf="@id/beers_out_button"/>

    <Button
        android:id="@+id/beers_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_elements_margin_top"
        android:text="@string/beers_out_button_text"
        style="@style/ButtonTesxtStyle"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_contenders_textview"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>